SP: fix anshin compare title - increase stroke 1px, fix line overlap, remove drop-shadow bleed

--- a/style.css
+++ b/style.css
@@ -4250,16 +4250,17 @@ body {
   }
 
   .anshin__compare-title {
-    line-height: 1.2;
-    -webkit-text-stroke: 2.25px #fff;
+    line-height: 1.5;
+    -webkit-text-stroke: 3.25px #fff;
     text-shadow: 2.25px 2.25px 2.25px #c8c8c8;
   }
 
   .anshin__compare-lg {
     font-size: 33.73px;
-    -webkit-text-stroke: 2.25px #fff;
+    -webkit-text-stroke: 3.25px #fff;
     paint-order: stroke fill;
-    filter: drop-shadow(2.25px 2.25px 2.25px #c8c8c8);
+    text-shadow: 2.25px 2.25px 2.25px #c8c8c8;
+    filter: none;
   }
 
   .anshin__compare-sm {
